# Ruby-Pack

./: README.md
plugins/ruby-pack/: ide-ruby-indenter.c  ide-ruby-indenter.h  meson.build  ruby-pack-plugin.c  ruby-pack.plugin
